--- a/survey-form.html
+++ b/survey-form.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1 id="title">Mim's Personal Survey Form</h1>
-    <p id="description">This is my personal survery form. Please use it to give me a review of how I treated you and what are your honest opinions of me. Your thoughtful criticism is valued. Peace!</p>
+    <p id="description">This is my personal survery form. Please use it to give me your feedback and share your thoughts on me. Peace!</p>
     <form id="survey-form">
       <fieldset id="personal-info">
         <label id="name-label" for="name" >Name <input required id="name" type="text" placeholder="Enter your name " /></label>
